--- a/FrontEnd/public/assets/css/style.css
+++ b/FrontEnd/public/assets/css/style.css
@@ -1,15 +1,3 @@
-/**
-* Template Name: NiceAdmin - v2.5.0
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-
-
 @font-face {
     font-family: istok;
     src: url(istok-r.ttf);
@@ -26,9 +14,11 @@
 
 :root {
     scroll-behavior: smooth;
-    --c-red: rgb(134, 32, 28);
-    --transition: all 0.4s 0.02s ease;
+    --transition: all 0.5s 0.03s ease;
     --radius: 10px;
+    --c-red: rgb(134, 32, 28);
+    --c-red-bg: rgba(134, 32, 28, 0.1);
+    --c-red-hover: #ff0a00;
     --c-grey: rgb(235, 237, 244);
     --c-lightgrey: rgba(235, 237, 244, 0.5);
     --c-green: rgb(30, 135, 28);
@@ -37,16 +27,18 @@
 body {
     font-family: "istok", sans-serif;
     background: #fff;
-    color: #444444;
+    color: #333;
+    font-size: 16px;
 }
 
 a {
     color: var(--c-red);
     text-decoration: underline;
+    transition: var(--transition);
 }
 
 a:hover {
-    color: #717ff5;
+    color: var(--c-red-hover);
     text-decoration: none;
 }
 
@@ -57,7 +49,7 @@ a:hover {
     background: url('../img/main-bg.jpg') center no-repeat;
     background-size: cover;
     box-sizing: border-box;
-    height: 100%;
+    min-height: 100%;
 }
 
 @media (max-width: 1199px) {
@@ -66,9 +58,7 @@ a:hover {
     }
 }
 
-/*--------------------------------------------------------------
-# Page Title
---------------------------------------------------------------*/
+
 .pagetitle {
     margin-bottom: 10px;
 }
@@ -246,11 +236,15 @@ a:hover {
     border-color: #d3d3d4;
 }
 
-/* Card */
+
 .card {
-    margin-bottom: 30px;
     border: none;
-    border-radius: 5px;
+    padding: 1.4rem 0.5rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
 }
 
 .card-header,
@@ -1291,6 +1285,8 @@ a:hover {
     padding-bottom: 15px;
     font-weight: bold;
     line-height: 1;
+    transition: var(--transition);
+    border: none;
 }
 
 .btn:hover{
@@ -1327,11 +1323,11 @@ a:hover {
     font-size: 18px;
     color: #fff !important;
     display: block;
-    margin-bottom: 3vw;
 }
 
 #main .title-block{
     margin-top: 1vw;
+    margin-bottom: 3vw;
 }
 
 #left-logo{
@@ -1366,7 +1362,6 @@ a:hover {
 #left-sub li a{
     font-size: 16px;
     font-weight: bold;
-    color: var(--c-red);
     text-decoration: none;
     display: inline-block;
     padding-top: 7px;
@@ -1460,4 +1455,53 @@ label.required::after{
     color: red;
     display: inline-block;
     margin-top: 5px;
+}
+
+.pp1{
+    font-size: 16px;
+    color: #333333;
+    margin-bottom: 1vw;
+}
+
+.pp1 span{
+    color: var(--c-red);
+    font-weight: bold;
+}
+
+#contact-form .btn{
+    width: 100%;
+}
+
+.messager{
+    box-sizing: border-box;
+    padding: 18px 20px 15px 20px;
+    color: var(--c-red);
+    background-color: var(--c-red-bg);
+    border-radius: var(--radius);
+    line-height: 1;
+    margin-bottom: 2vw;
+}
+
+#contact-form .col-md-4{
+    width: 32%;
+}
+
+#contact-form > .row{
+    justify-content: space-between;
+}
+
+.forgotten-pass{
+    margin-top: 2vw;
+}
+
+#left-sub li a:hover{
+     text-decoration: underline;
+ }
+
+#prana a:hover{
+    text-decoration: none;
+}
+
+.hidder{
+    display: none !important;
 }
