--- a/FrontEnd/public/assets/css/style.css
+++ b/FrontEnd/public/assets/css/style.css
@@ -48,6 +48,7 @@ a:hover {
     transition: var(--transition);
     background: url('../img/main-bg.jpg') center no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     box-sizing: border-box;
     min-height: 100%;
 }
@@ -1296,6 +1297,7 @@ a:hover {
 
 .sidebar-nav .nav-item{
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .sidebar-nav .nav-item a{
@@ -1308,6 +1310,25 @@ a:hover {
 .sidebar-nav .nav-item a.active, .sidebar-nav .nav-item a:hover{
     color: #fff;
     background-color: var(--c-red);
+}
+
+.sidebar-nav .nav-item .exit-link{
+    background-color: transparent !important;
+    background-image: url('../img/logout.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 16px;
+    padding-left: 30px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    width: auto;
+    font-size: 14px;
+}
+
+.sidebar-nav .nav-item .exit-link:hover{
+    color: inherit;
+    text-decoration: underline;
 }
 
 #main h1{
@@ -1453,7 +1474,7 @@ label.required::after{
     outline: 0;
 }
 
-#main .col-lg-10, #main .col-lg-12{
+#main .mx-auto{
     background-color: #fff;
     border-radius: var(--radius);
 }
@@ -1473,7 +1494,7 @@ label.required::after{
 .pp1{
     font-size: 16px;
     color: #333333;
-    margin-bottom: 1vw;
+    margin-bottom: 2vw;
 }
 
 .pp1 span{
@@ -1516,11 +1537,39 @@ label.required::after{
 }
 
 
-#main .card th{
+#main .card thead th{
     font-weight: normal;
     font-size: 15px;
     color: #333333;
     opacity: 0.5;
+    padding-bottom: 10px;
+}
+
+#accounter > .container > .row{
+    margin-bottom: 2vw;
+}
+
+#accounter .btn{
+    width: 100%;
+}
+
+#main .error-404 h1{
+    font-size: 120px;
+    color: #ffffff;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+#main .error-404 h2{
+    font-size: 33px;
+    color: #ffffff;
+    margin-top: 0;
+    text-transform: uppercase;
+}
+
+#main .error-404 img{
+    width: 470px;
+    height: auto;
 }
 
 .hidder{
