--- a/FrontEnd/public/assets/css/style.css
+++ b/FrontEnd/public/assets/css/style.css
@@ -1268,6 +1268,12 @@ a:hover {
 .logo{
     height: 100%;
     align-items: center;
+    font-size: 18px;
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
 }
 
 .btn, .sidebar-nav .nav-item a{
@@ -1480,7 +1486,7 @@ label.required::after{
     border-radius: var(--radius);
 }
 
-#contact-form .col-md-12 button{
+#contact-form .col-md-12 button, #reg-form .btn{
     width: 100%;
     margin-top: 2vw;
 }
@@ -1495,7 +1501,7 @@ label.required::after{
 .pp1{
     font-size: 16px;
     color: #333333;
-    margin-bottom: 2vw;
+    margin-bottom: 1.5vw;
 }
 
 .pp1 span{
@@ -1624,7 +1630,8 @@ label.required::after{
     border-radius: 10px;
     border: 3px solid transparent;
     margin-left: 20px;
-    min-width: 470px;
+    min-width: 540px;
+    position: relative;
 }
 
 .flex-flex{
@@ -1633,13 +1640,153 @@ label.required::after{
     align-items: center;
 }
 
-.payment-choice input[type="radio"]::checked{
-    border-color: rgb(30, 135, 28);
+.payment-choice input[type="radio"]::checked + span{
+    border-color: rgb(30, 135, 28) !important;
 }
 
 
 .reg-label{
     margin-bottom: 10px;
+}
+
+#basic-addon1, #basic-addon2{
+    border-radius: 0 10px 10px 0;
+    cursor: pointer;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#basic-addon2{
+    width: 70px;
+}
+
+.itog-row h4{
+    font-size: 18px;
+    font-weight: normal;
+    color: #333;
+}
+
+.itog-row h4 small{
+    font-weight: bold;
+    color: #86201c;
+}
+
+.itog-row{
+    margin-top: -30px;
+    justify-content: flex-start !important;
+}
+
+.after-order{
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: rgba(134, 32, 28, 0.1);
+    border-radius: 10px;
+}
+
+.copy-btn{
+    font-size: 14px;
+    color: #333;
+}
+
+.copy-btn span{
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    background: url('../img/icon-copy.png') center no-repeat;
+    background-size: 100%;
+    opacity: 0.3;
+    position: relative;
+    top: 6px;
+}
+
+.after-order b{
+    color: #86201c;
+}
+
+.after-order p:last-of-type{
+    margin-bottom: 0;
+}
+
+.copy-payment{
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    background: url('../img/icon-copy.png') center no-repeat;
+    background-size: 100%;
+    opacity: 0.3;
+    position: absolute;
+    right: 20px;
+    top: 15px;
+}
+
+.copy-payment:active{
+    opacity: 1;
+}
+
+#defaultCheck1{
+    border-radius: 0;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    box-sizing: border-box;
+    border: 2px solid rgba(197, 198, 206, 0.7);
+}
+
+#defaultCheck1 + label{
+    position: relative;
+    margin-left: 10px;
+    top: 8px;
+}
+
+.flex-flex.col-md-5 > *{
+    margin-right: 15px;
+}
+
+.flex-flex .hourz{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.flex-flex .minutez{
+    margin-left: 15px;
+}
+
+#id-info{
+    line-height: 1.3;
+    font-size: 14px;
+    color: #333;
+    opacity: 1;
+    margin-left: 40px;
+    display: block;
+}
+
+.order-text{
+    height: 100px;
+}
+
+#contact-form .reg-btn{
+    background-color: var(--c-green);
+    text-transform: uppercase;
+    color: #ebedf4;
+    font-size: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#contact-form .x-row{
+    margin-top: -10px;
+}
+
+.b-row{
+    justify-content: space-between;
+}
+
+.b-row > div, .b-row > button{
+    width: 48%;
+}
+
+.b-row div button{
+    width: 100%;
 }
 
 .hidder{
