--- a/FrontEnd/public/assets/css/style.css
+++ b/FrontEnd/public/assets/css/style.css
@@ -1958,6 +1958,10 @@ input[readonly]{
         font-size: 25px;
     }
 
+    #main .title-block small {
+        font-size: 17px
+    }
+
     #defaultCheck1{
         width: 25px;
         height: 25px;
@@ -1977,6 +1981,10 @@ input[readonly]{
     }
 
     .logo{
+        font-size: 17px;
+    }
+
+    .itog-row h4{
         font-size: 17px;
     }
 }
@@ -2043,6 +2051,10 @@ input[readonly]{
         margin-left: 0;
         background-position: 3px center;
     }
+
+    .itog-row h4{
+        font-size: 16px;
+    }
 }
 
 @media(max-width: 700px) {
@@ -2059,6 +2071,14 @@ input[readonly]{
 @media(max-width: 600px) {
     #main h1 {
         font-size: 22px;
+    }
+
+    #main .title-block small {
+        font-size: 16px
+    }
+
+    .pp1 {
+        margin-bottom: 4vw;
     }
 
     .form-control:not(textarea){
@@ -2082,6 +2102,9 @@ input[readonly]{
     #basic-addon1, #basic-addon2{
         padding-left: 13px;
         padding-right: 13px;
+        padding-top: 16px;
+        padding-bottom: 15px;
+        font-size: 13px;
     }
 
     #contact-form .row, #accounter .row, #contact-form .d-flex.y-row{
@@ -2134,6 +2157,10 @@ input[readonly]{
         font-size: 15px;
         line-height: 1.3;
     }
+
+    .itog-row h4{
+        font-size: 15px;
+    }
 }
 
 
@@ -2142,10 +2169,14 @@ input[readonly]{
         font-size: 21px;
     }
 
+    .after-order{
+        padding: 15px;
+    }
+
     #basic-addon1, #basic-addon2{
-        font-size: 13px;
-        padding-top: 20px;
-        padding-bottom: 17px;
+        font-size: 12px;
+        padding-top: 17px;
+        padding-bottom: 16px;
     }
 
     .header{
@@ -2185,6 +2216,14 @@ input[readonly]{
         font-size: 19px;
     }
 
+    #contact-form .id-info{
+        font-size: 14px;
+    }
+
+    #main .title-block small {
+        font-size: 15px
+    }
+
 }
 
 
@@ -2193,9 +2232,37 @@ input[readonly]{
         font-size: 20px;
     }
 
+    .payment-choice label span{
+        padding: 6px 35px;
+    }
+
+    .card-body {
+        padding: 0 14px 20px 15px;
+    }
+
+    .copy-payment{
+        right: 20px;
+        top: 7px;
+    }
+
+    .copy-btn {
+        font-size: 13px;
+    }
+
+    #basic-addon1, #basic-addon2 {
+        font-size: 11px;
+        padding-top: 16px;
+        padding-bottom: 13px;
+        accent-color: ;
+    }
+
     .form-control:not(textarea) {
         font-size: 13px;
         height: 40px;
+    }
+
+    .pp1 {
+        margin-bottom: 5vw;
     }
 
     .card{
@@ -2206,6 +2273,10 @@ input[readonly]{
         font-size: 14px;
     }
 
+    .itog-row h4{
+        font-size: 14px;
+    }
+
 }
 
 
@@ -2213,11 +2284,28 @@ input[readonly]{
     #main h1 {
         font-size: 19px;
     }
+
+    #contact-form .id-info {
+        font-size: 13px;
+    }
+
+    #contact-form .reg-btn {
+        font-size: 16px;
+    }
+
 }
 
 @media(max-width: 320px) {
     #main h1 {
         font-size: 18px;
+    }
+
+    #contact-form .reg-btn {
+        font-size: 15px;
+    }
+
+    .after-order {
+        padding: 10px;
     }
 
     body{
