--- a/FrontEnd/public/assets/css/style.css
+++ b/FrontEnd/public/assets/css/style.css
@@ -16,9 +16,9 @@
     scroll-behavior: smooth;
     --transition: all 0.5s 0.03s ease;
     --radius: 10px;
-    --c-red: rgb(134, 32, 28);
+    --c-red: #1e1e38;
     --c-red-bg: rgba(134, 32, 28, 0.1);
-    --c-red-hover: #ff0a00;
+    --c-red-hover: #4747ff;
     --c-grey: rgb(235, 237, 244);
     --c-lightgrey: rgba(235, 237, 244, 0.5);
     --c-green: rgb(30, 135, 28);
