drug new disigen

--- a/Friendly/public/css/app.css
+++ b/Friendly/public/css/app.css
@@ -192186,108 +192186,8 @@ select {
   }
 }
 
-
-/* SHANTIX ADAPTIVE */
-
-
-@media(max-width: 1510px){
-    .table th{
-    font-size: 15px;
-
-    }
-}
-
-
-@media(max-width: 1410px){
-    .table td{
-    font-size: 14px;
-    line-height: 1.2;
-    }
-}
-
-
-@media(max-width: 1310px){
-    .table th{
-    font-size: 14px;
-    }
-}
-
-
-@media(max-width: 1030px){
-    .table td, .table td a {
-  font-size: 13px;
-  }
-
-
-  .min-h-screen .flex-col{
-   flex-direction: row !important;
-  }
-}
-
-
-@media(max-width: 905px){
-    .table th {
-  font-size: 13px;
-}
-}
-
-
-@media(max-width: 805px){
-    .table td, .table td a {
-  font-size: 12px;
-}
-
-.h-16 {
-  height: 3rem;
-}
-
-.pt-4 {
-  padding-top: 0;
-}
-}
-
-
-@media(max-width: 705px){
-    .table th {
-  font-size: 12px;
-}
-
-
-.table td form a.block{
-    padding: 0 !important;
-}
+body > div{
 
 }
 
-
-@media(max-width: 605px){
-    .table td, .table td a {
-  font-size: 11px;
-}
-
-.pt-6 {
-  padding-top: 0;
-}
-}
-
-
-@media(max-width: 505px){
-    .table th {
-  font-size: 11px;
-}
-}
-
-
-
-@media(max-width: 405px){
-.table td, .table td a, .table th {
-  font-size: 10px;
-}
-
-
-}
-
-
-
-
-
+@import url('shx.css');
