--- a/Friendly/public/css/systo.css
+++ b/Friendly/public/css/systo.css
@@ -15,7 +15,8 @@
 :root{
     --c-blue: #1e1e38;
     --c-green: rgb(30, 135, 28);
-    --transition: all 0.5s 0.03s ease;
+    --c-light-grey: rgba(235, 237, 244, 0.5);
+    --transition: all 0.4s 0.03s ease;
     --radius: 10px;
 }
 
@@ -31,6 +32,7 @@ body{
     background: url('../images/main-bg.jpg') center no-repeat;
     background-size: cover;
     position: relative;
+    padding-bottom: 3vw;
 }
 
 .buttonz{
@@ -58,6 +60,11 @@ body{
     padding-bottom: 10px;
 }
 
+.btnx.active{
+    cursor: default;
+    background-color: grey !important;
+}
+
 .btnx:hover{
     background-color: var(--c-green);
 }
@@ -66,6 +73,7 @@ body{
     font-family: 'istok';
     font-weight: bold;
     font-size: 30px;
+    margin-top: 22px;
 }
 
 .exit-sys{
@@ -78,5 +86,77 @@ body{
     background-color: var(--c-blue);
     border-radius: var(--radius);
     font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+.exit-sys a:hover{
+    background-color: var(--c-green);
+}
+
+#main-former label{
+    font-size: 15px;
+    display: block;
+    margin-bottom: 5px;
+}
+
+#fon input[type="text"], #fon select, #fon input[type=email], #fon input[type="tel"], #fon input[type=number], #fon textarea, #fon input[type="password"]{
+    margin-bottom: 20px;
+    font-size: 16px;
+    height: 40px;
+    box-sizing: border-box;
+    border-radius: var(--radius);
+    background-color: var(--c-light-grey);
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    outline: none !important;
+    transition: var(--transition);
+    border: 1px solid rgb(209, 213, 219);
+}
+
+#fon textarea{
+    height: auto;
+    resize: vertical;
+}
+
+
+#fon input[type="text"]:focus, #fon select:focus, #fon input[type=email]:focus, #fon input[type="tel"]:focus, #fon input[type=number]:focus, #fon input[type="password"]:focus{
+    border-color: var(--c-green);
+    box-shadow: 0 0 6px #000290;
+}
+
+#main-btn button{
+    margin-left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: var(--c-green);
+    color: #fff;
+    text-align: center;
+    font-family: 'istok';
+    font-size: 16px;
+    margin-top: 2vw;
+    padding-top: 17px;
+    padding-bottom: 15px;
+    display: block;
+    border-radius: var(--radius);
+    transition: var(--transition);
+}
+
+.main-logo{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#main-btn button:hover{
+    background-color: var(--c-blue);
+}
+
+.log-h1{
+    font-size: 25px;
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-family: 'istok';
     font-weight: bold;
 }
